--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
 	"name": "rito-pls",
-	"version": "140426",
+	"author": "Bruce Caldwell <bruce@websharks-inc.com",
+	"description": "Riot API wrapper class with in-memory and SQL caching",
+	"version": "1.0.0-alpha",
+	"trueVersion": "140426",
+	"dependencies": {
+		"mysql": ">=0.9.0"
+	},
 	"devDependencies": {
 		"grunt": "~0.4.2",
 		"grunt-contrib-uglify": "~0.2.4",
 		"grunt-contrib-watch": "~0.5.3",
 		"grunt-contrib-concat": "~0.4.0"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/BruceCaldwell/ritopls.git"
+	},
+	"main": "build/rito-pls.min.js",
+	"start": "node build/rito-pls.min.js"
 }
