--- a/src/config.json
+++ b/src/config.json
@@ -8,7 +8,7 @@
 		"host": "localhost",
 		"user": "root",
 		"password": "",
-		"database": "elopass_node"
+		"database": "ritopls"
 	},
 
 	"caching": {
