--- a/package.json
+++ b/package.json
@@ -7,16 +7,9 @@
 	"dependencies": {
 		"mysql": ">=0.9.0"
 	},
-	"devDependencies": {
-		"grunt": "~0.4.2",
-		"grunt-contrib-uglify": "~0.2.4",
-		"grunt-contrib-watch": "~0.5.3",
-		"grunt-contrib-concat": "~0.4.0"
-	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/BruceCaldwell/ritopls.git"
 	},
-	"main": "build/rito-pls.min.js",
-	"start": "node build/rito-pls.min.js"
+	"main": "src/rito-pls.js"
 }
