--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "rito-pls",
 	"author": "Bruce Caldwell <bruce@websharks-inc.com",
 	"description": "Riot API wrapper class with in-memory and SQL caching",
-	"version": "1.0.0-alpha",
-	"trueVersion": "140426",
+	"version": "0.1.0",
+	"trueVersion": "140427",
 	"dependencies": {
 		"mysql": ">=0.9.0"
 	},
